--- a/account.html
+++ b/account.html
@@ -181,12 +181,31 @@
         </div>
 -->
         <div class="divider"></div>
-        <div class="upload">
-            <form action="account.html" method="post" enctype="multipart/form-data" id="upload-form">
-                <button type="button" class="btn btn-primary btn-lg upload-button" data-toggle="tooltip" data-placement="bottom" title="Upload your official Rutgers transcript here!">Upload New Transcript</button>
-                <input id="transcript-upload" name="new-transcript" type="file" accept="application/pdf"/>
-            </form>
-        </div>    
+        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target=".upload-modal">Update Completed Courses</button>
+
+        <div class="modal fade upload-modal" tabindex="-1" role="dialog" aria-labelledby="Upload New Transcript" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title bold">Update Completed Courses</h2>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="upload">
+                    <form action="account.html" method="post" enctype="multipart/form-data" id="upload-form">
+                        <button type="button" class="btn btn-primary btn-lg upload-button" data-toggle="tooltip" data-placement="bottom" title="Upload your official Rutgers transcript here!">Upload New Transcript</button>
+                        <input id="transcript-upload" name="new-transcript" type="file" accept="application/pdf"/>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-primary btn-lg" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary btn-lg">Save Changes</button>
+                </div>
+            </div>
+          </div>
+        </div>
+           
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
