--- a/class.html
+++ b/class.html
@@ -34,7 +34,7 @@
     <div class="container-fluid">
         <div class="column-left">
             <div class="class-header">
-                <span class="header-text bold">INTRO TO DATABASE SYSTEMS</span>
+                <span class="header-text">INTRO TO DATABASE SYSTEMS</span>
                 <!-- status: open -->
                 <span class="status open">
                   <i class="fas fa-check-circle"></i>
@@ -45,12 +45,12 @@
                 </span>
             </div>
             <div class="class-metadata">
-                <span class="bold">Course #:</span><span class="metadata-number">37:575:202</span>
-                <span class="bold">Core Codes:</span><span class="metadata-number">WC, WCr, HST</span>
-                <span class="bold">Credits:</span><span class="metadata-number">3</span>
+                <span class="subsubheader-text">Course #:</span><span class="metadata-number course-info-text">37:575:202</span>
+                <span class="subsubheader-text">Core Codes:</span><span class="metadata-number course-info-text">WC, WCr, HST</span>
+                <span class="subsubheader-text">Credits:</span><span class="metadata-number course-info-text">3</span>
             </div>
             <div class="class-prerequisites">
-                <span class="subheader-text bold">Required Prerequisites</span>
+                <span class="subheader-text">Required Prerequisites</span>
                 <br>
                 <span class="prereqs">DATA STRUCTURES, INTR DISCRET STRCT I, 01:013:240</span>
             </div>
@@ -198,7 +198,7 @@
                 <span class="subheader-text bold">Comment on this course</span>
                 <form action="class.html" method="post">
                     <textarea class="form-control" name="new-comment" type="text" placeholder="Enter your own thoughts and opinions about this course here!" required></textarea>
-                    <span class="bold">Rate this course:</span>
+                    <span class="subsubheader-text">Rate this course:</span>
                     <span class="rating align-middle">
                         <label>
                             <input type="radio" name="new-rating" value="1" required/>
@@ -234,7 +234,7 @@
                     <button type="submit" class="btn btn-primary comment-button bold">Post Comment</button>
                 </form>
             </div>
-            <div class="comments-header bold">
+            <div class="comments-header header-text">
                 <span>Comments</span>
             </div>
             <div class="class-comments">
