--- a/account.html
+++ b/account.html
@@ -43,7 +43,7 @@
                 <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h2 class="modal-title bold">Automatically Update Completed Courses</h2>
+                            <h2 class="update-header">Automatically Update Completed Courses</h2>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -67,7 +67,7 @@
                 <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h2 id="manual-update-header">Manually Update Completed Courses</h2>
+                            <h2 class="update-header">Manually Update Completed Courses</h2>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
