--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
                             <label class="cb" for="HST">HST</label>
                         </div>
                         <div class="reqBoxes">
-                            <h4>Wrinting & Communication</h4>
+                            <h4>Writing & Communication</h4>
                             <input type="checkbox" name="checkbox" id="WC">
                             <label class="cb" class="cb" for="WC">WC</label>
                             <input type="checkbox" name="checkbox" id="WCr">
