--- a/public/account.html
+++ b/public/account.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #293651;">
-                <a class="navbar-brand" href="index.html">Course Planner++</a>
+                <a class="navbar-brand" href="/">Course Planner++</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#loginForm" aria-controls="loginForm" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
