--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#">Course Planner++</a>
+                <a class="navbar-brand" href="/">Course Planner++</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
