created usercourses object for easier db insertion

--- a/public/account.html
+++ b/public/account.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="modal-body">
                             <div class="upload">
-                                <form action="account.html" method="post" enctype="multipart/form-data" id="upload-form">
+                                <form action="account.html" method="post" enctype="multipart/form-data" id="upload-auto-form">
                                     <button type="button" class="btn btn-primary btn-lg upload-button" data-toggle="tooltip" data-placement="bottom" title="Upload your official Rutgers transcript here!">Upload New Transcript</button>
                                     <input id="transcript-upload" name="new-transcript" type="file" accept="application/pdf"/>
                                 </form>
@@ -96,8 +96,8 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <form action="account.html" method="post" enctype="multipart/form-data" id="upload-form">
-                                    <textarea class="manual-add" name="new-courses" type="text" placeholder="Enter the semester names and the course numbers of the courses you took that semester." required></textarea>
+                                    <form action="account.html" method="post" enctype="multipart/form-data" id="upload-manual-form">
+                                        <textarea class="manual-add" name="new-courses" type="text" placeholder="Enter the semester names and the course numbers of the courses you took that semester." required></textarea>
                                     </form>
                         </div>
                             <div class="modal-footer">
