--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>Rutgers Course Planner++</title>
+        <!-- Bootstrap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,200,300,400,700,900" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -62,7 +63,7 @@
                                 <input class="smooth-input" type="text"  name="uname" placeholder="Username" required> <br>
                                 <input class="smooth-input" type="password" name="pword" placeholder="Password" required> <br>
                                 <input class="smooth-input" type="password" name="pword-confirm" placeholder="Confirm Password" required> <br>
-                                <button type="button" class="btn btn-primary">Register</button>
+                                <button type="button" class="btn">Register</button>
                             </form>
                         </div>
                     </div>
