--- a/public/class.html
+++ b/public/class.html
@@ -8,29 +8,71 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/css/resources.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/navbar.css">
     <link rel="stylesheet" type="text/css" href="resources/css/class.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #293651;">
-            <a class="navbar-brand" href="index.html">Course Planner++</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#loginForm" aria-controls="loginForm" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		    </button>
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <a class="navbar-brand" href="#">Course Planner++</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse justify-content-end" id="loginForm">
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="email" placeholder="Email Address" aria-label="Email">
-                    <input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password">
-                    <button class="btn btn-primary my-2 my-sm-0" type="submit">Log In</button>
-                </form>
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" id="signup" href="#">or Sign Up!</a>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-space" href="#loginModal" data-toggle="modal" data-target="#loginModal">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#regModal" data-toggle="modal" data-target="#regModal">Register</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <!-- Login Modal -->
+            <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Sign In</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body modal-layout">
+                            <form>
+                                <input class="smooth-input" type="text"  name="uname" placeholder="Username" required><br>
+                                <input class="smooth-input" type="password" name="pword" placeholder="Password" required><br>
+                                <button type="button" class="btn">Login</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
-    </header>
+            <!-- Registration Modal -->
+            <div class="modal fade" id="regModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="regModalLabel">Sign Up</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body modal-layout">
+                            <form>
+                                <input class="smooth-input" type="text"  name="uname" placeholder="Username" required> <br>
+                                <input class="smooth-input" type="password" name="pword" placeholder="Password" required> <br>
+                                <input class="smooth-input" type="password" name="pword-confirm" placeholder="Confirm Password" required> <br>
+                                <button type="button" class="btn">Register</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
     <div class="container-fluid">
         <div class="column-left">
             <div class="class-header">
