--- a/public/account.html
+++ b/public/account.html
@@ -41,7 +41,7 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div class="modal-body modal-layout">
+                        <div class="modal-body modal-layout login">
                             <form>
                                 <input class="smooth-input" type="text"  name="uname" placeholder="Username" required><br>
                                 <input class="smooth-input" type="password" name="pword" placeholder="Password" required><br>
@@ -61,7 +61,7 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div class="modal-body modal-layout">
+                        <div class="modal-body modal-layout login">
                             <form>
                                 <input class="smooth-input" type="text"  name="uname" placeholder="Username" required> <br>
                                 <input class="smooth-input" type="password" name="pword" placeholder="Password" required> <br>
