added morgan for dev logging, testing form submission routes

--- a/public/course.html
+++ b/public/course.html
@@ -238,7 +238,7 @@
             </div>
             <div class="add-comments border rounded">
                 <span class="subheader-text bold">Comment on this course</span>
-                <form action="class.html" method="post">
+                <form action="/comments" method="post">
                     <textarea class="form-control" name="new-comment" type="text" placeholder="Enter your own thoughts and opinions about this course here!" required></textarea>
                     <span class="subsubheader-text">Rate this course:</span>
                     <span class="rating align-middle">
